--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-Radio
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Communal Radio Club</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  <!-- css -->
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="font.css">
+  <link rel="stylesheet" href="index_media.css">
+
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+  <!-- p5 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+</head>
+
+
+<body>
+  <!-- Menu: Random ================================================================== -->
+  <div class="cavas-area">
+    <button id="radioRandomBtn" class="font-menu" style="font-size: 0;" onclick="radioRandomPlay()">
+      <img id="radioRandomBtnImg" src="icon/btn.png">
+    </button>
+  </div>
+
+
+  <!-- Menu: Chat ================================================================== -->
+  <iframe class="menu-chat" src="https://r-club3.glitch.me"></iframe>
+  
+
+
+  <!-- Menu: Stations ================================================================== -->
+  <div id="dropdownStation" class="menu-right">
+    <button id="row0" class="menu-btn font-category" onclick="radioPlay(0, 'Jazz', 'https://ice7.securenetsystems.net/KCSM2')">
+      Jazz
+    </button>
+    <button id="row1" class="menu-btn font-category" onclick="radioPlay(1, 'Indie', 'https://live.radioart.com/fIndie.mp3')">
+      Indie
+      <!-- https://www.radioart.com -->
+    </button>
+    <button id="row2" class="menu-btn font-category" onclick="radioPlay(2, 'Dance', 'https://myhouseradiofm.out.airtime.pro:8000/myhouseradiofm_a')">
+      Dance
+      <!-- My House Radio: Commercial-Free Dance Music -->
+      <!-- https://www.myhouseradio.fm -->
+    </button>
+    <button id="row3" class="menu-btn font-category" onclick="radioPlay(3, 'Musical', 'https://das-edge09-live365-dal03.cdnstream.com/a99840?listenerId=esTrackblock0368254&aw_0_1st.playerid=esPlayer&aw_0_1st.skey=1710206896')">
+      Musical
+      <!-- Musical Theatre Radio -->
+      <!-- https://player.live365.com -->
+    </button>
+    <button id="row4" class="menu-btn font-category" onclick="radioPlay(4, 'Jukebox', 'https://eagle.streemlion.com/proxy/psychedelicj?mp=/stream')">
+      Jukebox
+    </button>
+    <button id="row5" class="menu-btn font-category" onclick="radioPlay(5, 'Pop', 'http://gr02.cdnstream.com:8290')">
+      Pop
+    </button>
+    <button id="row6" class="menu-btn font-category" onclick="radioPlay(6, 'WorldWide FM', 'https://worldwidefm.out.airtime.pro/worldwidefm_a?src=muso.fm')">
+      WorldWide FM
+    </button>
+  </div>
+
+
+  <!-- Menu: Info ================================================================== -->
+  <div class="menu-bottom">
+    <button class="font-menu">
+      Communal Radio Club
+    </button>
+    <button id="playStop" class="font-menu" onclick="playStop()">
+      ▶
+    </button>
+    <button id="radioStationText" class="font-menu" onclick="openDropdown()">Jazz</button>
+  </div>
+
+
+  <!-- Players ================================================================== -->
+  <audio id="radioPlayer0"></audio>
+  <audio id="radioPlayer1"></audio>
+  <audio id="radioPlayer2"></audio>
+  <audio id="radioPlayer3"></audio>
+  <audio id="radioPlayer4"></audio>
+  <audio id="radioPlayer5"></audio>
+  <audio id="radioPlayer6"></audio>
+
+
+  <!-- Videos ================================================================== -->
+  <div class="videoContainer">
+    <img id="videoPlayer">
+  </div>
+  
+
+  <!-- JS ================================================================== -->
+  <script type="text/javascript" src="radio.js"></script>
+ 
+</body>
+</html>
