--- a/index.html
+++ b/index.html
@@ -26,16 +26,12 @@
     <button id="radioRandomBtn" class="font-menu" style="font-size: 0;" onclick="radioRandomPlay()">
       <img id="radioRandomBtnImg" src="icon/btn.png">
     </button>
-    <button id="exceptBtn" onclick="info()"></button>
+    <button id="exceptBtn" onclick="infoImage()"></button>
   </div>
-
-
 
 
   <!-- Menu: Chat ================================================================== -->
   <iframe class="menu-chat" src="https://r-club5.glitch.me"></iframe>
-  <!-- <iframe class="menu-chat" src="https://r-club3.glitch.me"></iframe> -->
-  
 
 
   <!-- Menu: Stations ================================================================== -->
@@ -108,18 +104,6 @@
     <p>
       Created by <a href="https://leehalim.com" target="_blank">Halim Lee | leehalim.com</a>
     </p>
-
-    <!-- <p>
-      It’s truly wonderful that, amidst this vast expanse of Earth, you and I can come together in the same space and listen to the same music simultaneously. “Communal Radio Club” is a space where visitors can listen to live radio stations. Whenever listeners play the radio, odd random videos are played in a loop. 
-      <br><br>
-      We live in a world where we listen to music of our tastes whenever we want. Through Spotify, YouTube, Apple Music, etc, we pick, play, and skip tracks shortly. Music has truly become one of the most accessible mediums from the evolution of technology.
-      <br><br>
-      Yet, even in this world, radio keeps broadcasting 24/7, crossing borders. Turning on my radio in the small room, I imagine someone living on the other side of the Earth listening to the same music together. The sense of connection is truly exhilarating. In the Community Radio Club, visitors can leave their names on the listener list to mark their presence. Encountering a familiar name upon returning to the site will add an extra layer of excitement to the experience. 
-      <br><br>
-      Design by Halim Lee | leehalim.com
-      <br><br>
-      Advised by Fruit School
-    </p> -->
   </div>
 
   <!-- Players ================================================================== -->
@@ -163,36 +147,5 @@
   <script type="text/javascript" src="index.js"></script>
   <!-- <script type="text/javascript" src="info.js"></script> -->
 
-  <!-- <script>
-    let constrain = 300;
-    // let mouseOverContainer = document.getElementById("videoTouch");
-    let mouseOverContainer = document.body;
-    let videoPlayer3D = document.getElementById("videoPlayer");
-
-    function transforms(x, y, el) {
-      let box = el.getBoundingClientRect();
-      let calcX = -(y - box.y - (box.height / 2)) / constrain;
-      let calcY = (x - box.x - (box.width / 2)) / constrain;
-      
-      return "perspective(100px)"
-       + "rotateX("+ calcX +"deg)"
-       + "rotateY("+ calcY +"deg)";
-    };
-
-    function transformElement(el, xyEl) {
-      el.style.transform  = transforms.apply(null, xyEl);
-    }
-
-    mouseOverContainer.onmousemove = function(e) {
-      let xy = [e.clientX, e.clientY];
-      let position = xy.concat([videoPlayer3D]);
-
-      window.requestAnimationFrame(function(){
-        transformElement(videoPlayer3D, position);
-      });
-    };
-  </script> -->
-
- 
 </body>
 </html>
