--- a/index.html
+++ b/index.html
@@ -56,17 +56,33 @@
       <!-- Musical Theatre Radio -->
       <!-- https://player.live365.com -->
     </button>
-    <button id="row4" class="menu-btn font-category" onclick="radioPlay(4, 'Jukebox', 'https://eagle.streemlion.com/proxy/psychedelicj?mp=/stream')">
-      Jukebox
-    </button>
-    <button id="row5" class="menu-btn font-category" onclick="radioPlay(5, 'Pop', 'http://gr02.cdnstream.com:8290')">
+    <button id="row4" class="menu-btn font-category" onclick="radioPlay(4, 'Pop', 'https://playerservices.streamtheworld.com/api/livestream-redirect/977_HITS_SC')">
       Pop
+      <!-- Today's Hits Radio live -->
+      <!-- https://www.psychedelicjukebox.com -->
     </button>
-    <button id="row6" class="menu-btn font-category" onclick="radioPlay(6, 'WorldWide FM', 'https://worldwidefm.out.airtime.pro/worldwidefm_a?src=muso.fm')">
-      WorldWide FM
+    <button id="row5" class="menu-btn font-category" onclick="radioPlay(5, 'Jukebox', 'https://eagle.streemlion.com/proxy/psychedelicj?mp=/stream')">
+      Jukebox
+      <!-- Psychedelic Jukebox -->
+      <!-- https://www.psychedelicjukebox.com -->
+    </button>
+
+
+    <!-- <button id="row4" class="menu-btn font-category" onclick="radioPlay(4, 'Jukebox', 'https://eagle.streemlion.com/proxy/psychedelicj?mp=/stream')">
+      Jukebox -->
+      <!-- Psychedelic Jukebox -->
+      <!-- https://www.psychedelicjukebox.com -->
+    <!-- </button> -->
+    <!-- <button id="row5" class="menu-btn font-category" onclick="radioPlay(5, 'Pop', 'https://playerservices.streamtheworld.com/api/livestream-redirect/977_HITS_SC')">
+      Pop -->
+      <!-- Today's Hits Radio live -->
+      <!-- https://www.psychedelicjukebox.com -->
+    <!-- </button> -->
+    <!-- <button id="row6" class="menu-btn font-category" onclick="radioPlay(6, 'WorldWide FM', 'https://worldwidefm.out.airtime.pro/worldwidefm_a?src=muso.fm')">
+      WorldWide FM -->
       <!-- WorldWide FM -->
       <!-- https://worldwidefm.net -->
-    </button>
+    <!-- </button> -->
   </div>
 
 
@@ -92,19 +108,21 @@
       Yet, even in this world, radio keeps broadcasting 24/7, crossing borders. Turning on my radio in the small room, I imagine someone living on the other side of the Earth listening to the same music together. The sense of connection is truly exhilarating. In the Community Radio Club, you can leave your names on the listener list to mark your presence. Encountering a familiar name upon returning to the site will add an extra layer of excitement to the experience. 
     </p>
     <p>
-      This project emerged from the NPC Artist workshop led by <a href="https://johnprovencher.com" target="_blank">John Provencher</a> at the <a href="https://fruitful.school" target="_blank">Fruitful School</a>. Each category of radio is mapped to the following stations, which may be changed periodically: 
+      This project emerged from the NPC Artist workshop led by <a href="https://johnprovencher.com" target="_blank">John Provencher</a> at the <a href="https://fruitful.school" target="_blank">Fruitful School</a>. 
+      <!-- Each category of radio is mapped to the following stations, which may be changed periodically: 
       Jazz (<a href="https://www.kcsm.org" target="_blank">KCSM</a>), 
       Indie (<a href="https://www.radioart.com" target="_blank">Radio Art</a>), 
       Dance (<a href="https://www.myhouseradio.fm" target="_blank">My House Radio</a>), 
       Musical (<a href="https://player.live365.com" target="_blank">Musical Theatre Radio</a>), 
-      Jukebox, 
-      Pop, 
-      Worldwide FM (<a href="https://worldwidefm.net" target="_blank">Worldwide FM</a>).
+      Jukebox (<a href="https://www.psychedelicjukebox.com" target="_blank">Psychedelic Jukebox</a>), 
+      Pop (<a href="https://www.psychedelicjukebox.com" target="_blank">Today's Hits Radio live</a>), 
+      Worldwide FM (<a href="https://worldwidefm.net" target="_blank">Worldwide FM</a>). -->
     </p>
     <p>
       Created by <a href="https://leehalim.com" target="_blank">Halim Lee | leehalim.com</a>
     </p>
   </div>
+  
 
   <!-- Players ================================================================== -->
   <audio id="radioPlayer0"></audio>
