--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
     </p>
     <p>
       This project emerged from the NPC Artist workshop led by <a href="https://johnprovencher.com" target="_blank">John Provencher</a> at the <a href="https://fruitful.school" target="_blank">Fruitful School</a>. 
-      <!-- Each category of radio is mapped to the following stations, which may be changed periodically: 
+      Each category of radio is mapped to the following stations, which may be changed periodically: 
       Jazz (<a href="https://www.kcsm.org" target="_blank">KCSM</a>), 
       Indie (<a href="https://www.radioart.com" target="_blank">Radio Art</a>), 
       Dance (<a href="https://www.myhouseradio.fm" target="_blank">My House Radio</a>), 
       Musical (<a href="https://player.live365.com" target="_blank">Musical Theatre Radio</a>), 
       Jukebox (<a href="https://www.psychedelicjukebox.com" target="_blank">Psychedelic Jukebox</a>), 
       Pop (<a href="https://www.psychedelicjukebox.com" target="_blank">Today's Hits Radio live</a>), 
-      Worldwide FM (<a href="https://worldwidefm.net" target="_blank">Worldwide FM</a>). -->
+      Worldwide FM (<a href="https://worldwidefm.net" target="_blank">Worldwide FM</a>).
     </p>
     <p>
       Created by <a href="https://leehalim.com" target="_blank">Halim Lee | leehalim.com</a>
