--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       Indie (<a href="https://www.radioart.com" target="_blank">Radio Art</a>), 
       Dance (<a href="https://www.myhouseradio.fm" target="_blank">My House Radio</a>), 
       Musical (<a href="https://player.live365.com" target="_blank">Musical Theatre Radio</a>), 
-      Jukebox (<a href="https://www.psychedelicjukebox.com" target="_blank">Psychedelic Jukebox</a>), 
       Pop (<a href="https://www.psychedelicjukebox.com" target="_blank">Today's Hits Radio live</a>), 
-      Worldwide FM (<a href="https://worldwidefm.net" target="_blank">Worldwide FM</a>).
+      Jukebox (<a href="https://www.psychedelicjukebox.com" target="_blank">Psychedelic Jukebox</a>). 
+      <!-- Worldwide FM (<a href="https://worldwidefm.net" target="_blank">Worldwide FM</a>). -->
     </p>
     <p>
       Created by <a href="https://leehalim.com" target="_blank">Halim Lee | leehalim.com</a>
