--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 
   <div id="infoContents" class="font-menu" style="z-index:6;">
     <p>
-      It’s truly wonderful that, amidst this vast expanse of Earth, you and I can come together in the same space and listen to the same music simultaneously. “Communal Radio Club” is a space where visitors can listen to live radio stations. Clicking the blue jog dial <b style="color: blue;">☐</b> in the middle of the screen will play a random radio station with an odd animation. 
+      It’s truly wonderful that, across this vast expanse of Earth, you and I can come together in the same space and listen to the same music simultaneously. “Communal Radio Club” is a space where visitors can listen to live radio stations. Clicking the blue jog dial in the middle of the screen will play a random radio station with an odd animation. 
     </p>
     <p>
-      We live in a world where we listen to music of our tastes whenever we want. Through Spotify, YouTube, Apple Music, etc, we pick, play, and skip tracks shortly. Music has truly become one of the most accessible mediums from the evolution of technology.
+      We live in a world where we listen to music of our tastes whenever we want. Through Spotify, YouTube, Apple Music, among others, we pick, play, and skip tracks at will. Music has truly become one of the most accessible forms of media from the evolution of technology.
     </p>
     <p>
-      Yet, even in this world, radio keeps broadcasting 24/7, crossing borders. Turning on my radio in the small room, I imagine someone living on the other side of the Earth listening to the same music together. The sense of connection is truly exhilarating. In the Community Radio Club, you can leave your names on the listener list to mark your presence. Encountering a familiar name upon returning to the site will add an extra layer of excitement to the experience. 
+      Yet, even in this world, radio keeps broadcasting 24/7, crossing borders. Turning on the radio in my small room, I imagine someone living on the other side of the Earth listening to the same music together. The sense of connection is truly exhilarating. In the Community Radio Club, you can leave your names on the listener list to mark your presence. Encountering a familiar name upon returning to the site will add an extra layer of excitement to the experience. 
     </p>
     <p>
       This project emerged from the NPC Artist workshop led by <a href="https://johnprovencher.com" target="_blank">John Provencher</a> at the <a href="https://fruitful.school" target="_blank">Fruitful School</a>. 
